--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,15 @@
               <path d="M72.4914 28.8414C55.6313 28.8414 40.2883 49.6493 40.2883 72.4914C40.2883 95.3335 55.6313 116.141 72.4914 116.141C89.3515 116.141 104.694 95.3335 104.694 72.4914C104.694 49.6493 89.3515 28.8414 72.4914 28.8414ZM50.7698 72.4914C50.7698 62.4581 54.6487 52.5455 60.1136 46.2014C59.5964 48.4942 59.3205 50.856 59.3205 53.2695C59.3205 61.9237 62.6995 70.0606 68.8022 76.1806C76.8012 84.1796 77.3184 96.8506 70.371 105.453C60.1653 103.539 50.7698 88.1619 50.7698 72.4914ZM84.852 98.8158C87.1965 88.3343 84.3348 76.9219 76.1978 68.7849C68.1988 60.7859 67.6816 48.115 74.6291 39.5125C84.8175 41.4434 94.2302 56.8208 94.2302 72.4914C94.2302 82.5592 90.3341 92.489 84.852 98.8158Z" fill="white"/>
             </svg>
           </div>
-          <div class="burger-menu">
+          <div class="menu">
             <svg width="24" height="16" viewBox="0 0 24 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 2H23.5M0 8H23.5M0 14.5H16.5" stroke="white" stroke-width="3"/>
             </svg>
+            <ul>
+              <li><a href="/sub-page/">das Café</a></li>
+              <li><a href="/sub-page/">Über Uns</a></li>
+              <li><a href="/sub-page/">Shop</a></li>
+            </ul>
           </div>   
         </div>
 
@@ -348,7 +353,10 @@
 
       <section class="section5">
         <h2>Komm vorbei</h2>
-        <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=10.113312005996706%2C54.339084139860894%2C10.131229162216188%2C54.34455044818014&amp;layer=mapnik&amp;marker=54.34181738488074%2C10.122270584106445" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=54.34182&amp;mlon=10.12227#map=17/54.34182/10.12227">Größere Karte anzeigen</a></small>
+        <iframe width="2000px" height="300px" src="https://www.openstreetmap.org/export/embed.html?bbox=10.11920750141144%2C54.34067282155345%2C10.12520492076874%2C54.34288061187882&amp;layer=hot&amp;marker=54.34177673153791%2C10.122206211090088" style="border: none">
+        </iframe>
+        
+       
       </section>
 
     </main>
