add subpages origin and cafe

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    {{> header }}
+    {{> header_home }}
 
     <main>
 
@@ -253,7 +253,7 @@
           <h3>Herkunft</h3>
           <p>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien 
             leben die Blindtexte.Und das alles in bester Bio Qualität</p>
-          <a href="">mehr</a>
+          <a href="subpage/origin.html">mehr</a>
         </div>
       </section>
 
