--- a/src/subpage/origin.html
+++ b/src/subpage/origin.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rustica - Herkunft der Bohnen</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/components/hero.css">
-    <link rel="stylesheet" href="css/components/footer.css">
-    <link rel="stylesheet" href="css/components/section1.css">
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/components/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Oregano" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +14,11 @@
 </head>
 <body>
     <h1>Test</h1>
+
+    
+    {{> footer }}
+
+    <script src="../js/index.js" type="module"></script>
     
 </body>
 </html>
