--- a/src/subpage/cafe.html
+++ b/src/subpage/cafe.html
@@ -3,17 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rustica - Das Café</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/components/hero.css">
-    <link rel="stylesheet" href="css/components/footer.css">
-    <link rel="stylesheet" href="css/components/section1.css">
+    <title>Rustica - Herkunft der Bohnen</title>
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/components/index.css">
+    <link rel="stylesheet" href="../css/components/cafe.css">
+    <link rel="stylesheet" href="../css/components/map.css">
+    <link rel="stylesheet" href="../css/components/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Oregano" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Permanent+Marker&family=Quattrocento&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <H1>Das Café</H1>
+   
+    <header class="cafe"> 
+    {{> navigation}}   
+    </header>
+
+    <main>
+
+        <section class="section1">
+          <div class="container_a_section1">
+  
+            <div>
+  
+              <div class="flex_item_a">
+              <h2>Rösterei & Café</h2>
+              <p>Kaffee aus Kiel, direkt gehandelt und geröstet 
+                in der eigenen Rösterei, serviert im gemütlichen Café 
+                in der Innenstadt.</p>
+              </div>
+  
+              <div class="flex_item_b">
+              <p>Komm uns besuchen!</p>
+              <p> Fraunhoferstr. 13, Kiel</p>
+              </div>
+  
+              <div class="flex_item_c">
+              <p>Mo - Fr 8-18 Uhr</p>
+              <p> Sa 11-18 Uhr</p>
+              </div>
+  
+            </div>
+  
+            <img id="image1" src="../images/FEND-Coffee-machine-2.jpg" alt="professionelle Kaffeemaschine">
+  
+          </div>
+        </section>
+  
+    </main>
+   
+    {{> map }}
+    {{> footer }}
+
+    <script src="../js/index.js" type="module"></script>
 </body>
 </html>
