--- a/src/subpage/origin.html
+++ b/src/subpage/origin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rustica - Herkunft der Bohnen</title>
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/components/origin.css">
     <link rel="stylesheet" href="../css/components/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Oregano" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +14,69 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Permanent+Marker&family=Quattrocento&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Test</h1>
+    <header class="cafe"> 
+        {{> navigation}}   
+    </header>
+
+    <section class="section_o1">
+        <div class="o1_text">
+            <h2>Der Ursprung von Rustica</h2>
+            <p>Weit hinten, hinter den Wortbergen, fern der Länder 
+                Vokalien und Konsonantien leben die Blindtexte. 
+                Abgeschieden wohnen sie in Buchstabhausen an der Küste des 
+                Semantik, eines großen Sprachozeans. Ein kleines Bächlein 
+                namens Duden fließt durch ihren Ort und versorgt sie mit 
+                den nötigen Regelialien. Es ist ein paradiesmatisches Land, 
+                in dem einem gebratene Satzteile in den Mund fliegen. 
+                Nicht einmal von der allmächtigen Interpunktion werden die 
+                Blindtexte beherrscht – ein geradezu unorthographisches Leben.
+            </p>
+        </div>
+    </section>
+
+    <section class="section_o2">
+        <video controls>
+            <source src="https://file.notion.so/f/f/4aead078-4215-4f45-bf15-54d9b95b624b/e34ffb06-9180-4959-8682-6e9a540b773f/close-up-of-dark-roasted.webm?id=f2b9cbed-6be4-4f62-95ff-5ea5c944ff68&table=block&spaceId=4aead078-4215-4f45-bf15-54d9b95b624b&expirationTimestamp=1706904000000&signature=T65oPQGYHGERj8YwImzVxKqHresA6fkpc7YGL8vWmJ4&downloadName=close-up-of-dark-roasted.webm" type="video/webm">
+            <source src="https://file.notion.so/f/f/4aead078-4215-4f45-bf15-54d9b95b624b/d92ce2dd-35c1-4db0-bf59-6e8f6b2fa23c/close-up-of-dark-roasted.mp4?id=f2b9cbed-6be4-4f62-95ff-5ea5c944ff68&table=block&spaceId=4aead078-4215-4f45-bf15-54d9b95b624b&expirationTimestamp=1706904000000&signature=82Brb0qmgw9nqhKpPnC-HyR0ahpHTGMhxKYgt9QivPw&downloadName=close-up-of-dark-roasted.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </section>
+
+    <section>
+        <div class="o3_container">
+            <div class="o3_item">
+                <h2>Die Anbaugebiete</h2>
+                <p>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien 
+                    und Konsonantien leben die Blindtexte. Abgeschieden wohnen 
+                    sie in Buchstabhausen an der Küste des Semantik, eines großen 
+                    Sprachozeans. Ein kleines Bächlein namens Duden fließt durch 
+                    ihren Ort und versorgt sie mit den nötigen Regelialien. Es ist 
+                    ein paradiesmatisches Land, in dem einem gebratene Satzteile 
+                    in den Mund fliegen.Nicht einmal von der allmächtigen Interpunktion 
+                    werden die Blindtexte beherrscht – ein geradezu unorthographisches 
+                    Leben.</p>
+            </div>
+            <img id="image3" src="../images/FEND-coffee-plant-2.jpg" alt="Kaffeesträucher">
+        </div>
+
+        <div class="o3_container">
+            <div class="o3_item">
+                <h2>Das Wohl der Kaffeebauern</h2>
+                <p>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien 
+                    und Konsonantien leben die Blindtexte. Abgeschieden wohnen 
+                    sie in Buchstabhausen an der Küste des Semantik, eines großen 
+                    Sprachozeans. Ein kleines Bächlein namens Duden fließt durch 
+                    ihren Ort und versorgt sie mit den nötigen Regelialien. Es ist 
+                    ein paradiesmatisches Land, in dem einem gebratene Satzteile 
+                    in den Mund fliegen.Nicht einmal von der allmächtigen Interpunktion 
+                    werden die Blindtexte beherrscht – ein geradezu unorthographisches 
+                    Leben.</p>
+            </div>
+            <img id="image4" src="../images/FEND-Coffee-worker.jpg" alt="Kaffeearbeiter">
+        </div>
+    </section>
+
+    
 
     
     {{> footer }}
