--- a/src/subpage/origin.html
+++ b/src/subpage/origin.html
@@ -35,11 +35,17 @@
     </section>
 
     <section class="section_o2">
-        <video controls>
-            <source src="https://file.notion.so/f/f/4aead078-4215-4f45-bf15-54d9b95b624b/e34ffb06-9180-4959-8682-6e9a540b773f/close-up-of-dark-roasted.webm?id=f2b9cbed-6be4-4f62-95ff-5ea5c944ff68&table=block&spaceId=4aead078-4215-4f45-bf15-54d9b95b624b&expirationTimestamp=1706904000000&signature=T65oPQGYHGERj8YwImzVxKqHresA6fkpc7YGL8vWmJ4&downloadName=close-up-of-dark-roasted.webm" type="video/webm">
-            <source src="https://file.notion.so/f/f/4aead078-4215-4f45-bf15-54d9b95b624b/d92ce2dd-35c1-4db0-bf59-6e8f6b2fa23c/close-up-of-dark-roasted.mp4?id=f2b9cbed-6be4-4f62-95ff-5ea5c944ff68&table=block&spaceId=4aead078-4215-4f45-bf15-54d9b95b624b&expirationTimestamp=1706904000000&signature=82Brb0qmgw9nqhKpPnC-HyR0ahpHTGMhxKYgt9QivPw&downloadName=close-up-of-dark-roasted.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <div class="video" id="video">
+            <video controls poster="../images/Bildschirmfoto.jpg">
+                <source src="../images/close-up-of-dark-roasted.mp4" type="video/webm">
+                <source src="src/images/close-up-of-dark-roasted.webm" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <div id="play">
+                <img src="../images/Ellipse 59.svg" alt="background playbutton"> 
+                <img id="poly" src="../images/Polygon 1.svg" alt="playbutton">
+            </div>
+        </div>
     </section>
 
     <section>
