navigationbar instead of header.hbs

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,20 @@
   </head>
 
   <body>
-   
-    {{> header_index }}
+    <header class="hero">
+
+      {{> navigation}} 
+
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1>Rustica</h1>
+          <p>Bio und Fair seit 1991</p>
+        </div>
+    
+        <button class="button-dark"><a href="/sub-page/">Zum Shop</a></button>
+
+      </div>
+    </header>
 
     <main>
 
