--- a/src/subpage/cafe.html
+++ b/src/subpage/cafe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rustica - Herkunft der Bohnen</title>
+    <link rel="stylesheet" href="../css/components/navigation.css">
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/components/index.css">
     <link rel="stylesheet" href="../css/components/cafe.css">
