--- a/src/subpage/origin.html
+++ b/src/subpage/origin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rustica - Herkunft der Bohnen</title>
+    <link rel="stylesheet" href="../css/components/navigation.css">
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/components/origin.css">
     <link rel="stylesheet" href="../css/components/footer.css">
