add javascript to open navigation-overlay

--- a/src/subpage/origin.html
+++ b/src/subpage/origin.html
@@ -89,6 +89,7 @@
     {{> footer }}
 
     <script src="../js/index.js" type="module"></script>
+    <script src="../js/videoplayer.js"></script>
     
 </body>
 </html>
