style origin.html section3

--- a/src/subpage/origin.html
+++ b/src/subpage/origin.html
@@ -49,10 +49,10 @@
         </div>
     </section>
 
-    <section>
-        <div class="o3_container">
+    <section class="section_o3">
+        <div class="o3_container1">
             <div class="o3_item">
-                <h2>Die Anbaugebiete</h2>
+                <h3>Die Anbaugebiete</h3>
                 <p>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien 
                     und Konsonantien leben die Blindtexte. Abgeschieden wohnen 
                     sie in Buchstabhausen an der Küste des Semantik, eines großen 
@@ -66,9 +66,9 @@
             <img id="image3" src="../images/FEND-coffee-plant-2.jpg" alt="Kaffeesträucher">
         </div>
 
-        <div class="o3_container">
+        <div class="o3_container2">
             <div class="o3_item">
-                <h2>Das Wohl der Kaffeebauern</h2>
+                <h3>Das Wohl der Kaffeebauern</h3>
                 <p>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien 
                     und Konsonantien leben die Blindtexte. Abgeschieden wohnen 
                     sie in Buchstabhausen an der Küste des Semantik, eines großen 
