desktop footer modified

--- a/src/index.html
+++ b/src/index.html
@@ -267,7 +267,7 @@
           <h3>Herkunft</h3>
           <p>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien 
             leben die Blindtexte.Und das alles in bester Bio Qualität</p>
-          <a href="subpage/origin.html">mehr</a>
+          <a class="button-klein" href="subpage/origin.html">mehr</a>
         </div>
       </section>
 
