--- a/src/subpage/cafe.html
+++ b/src/subpage/cafe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rustica - Herkunft der Bohnen</title>
+    <title>Rustica - Café</title>
     <link rel="stylesheet" href="../css/components/navigation.css">
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/components/index.css">
