change html for select

--- a/src/subpage/contact.html
+++ b/src/subpage/contact.html
@@ -36,13 +36,12 @@
             <label for="tel">Telefonnummer</label><br>
             <input type="tel" id="tel" name="tel" placeholder="Telefonnummer"><br><br>
 
-            <label for="theme">Dein Betreff</label><br>
-
-            <select name="theme" id="theme">
-            <option value="delivery">Fragen zur Lieferung</option>
-            <option value="product">Fragen zum Produkt</option>
-            <option value="sale">Vertriebsfragen</option>
-            <option value="others">Einfach nur so...</option>
+            <select id="theme">
+                <option value="">Dein Betreff:</option>
+                <option value="delivery">Fragen zur Lieferung</option>
+                <option value="product">Fragen zum Produkt</option>
+                <option value="sale">Vertriebsfragen</option>
+                <option value="others">Einfach nur so...</option>
             </select><br><br>
 
             <label for="message">Deine Nachricht</label><br>
