--- a/src/subpage/contact.html
+++ b/src/subpage/contact.html
@@ -25,7 +25,7 @@
             <h2>Schreib' uns gern!</h2>
         </div>
 
-        <form action="" method="post">
+        <form action="https://formspree.io/f/xkndrvdv" method="post">
 
             <label for="name">Name*</label><br>
             <input type="text" id="name" name="name" placeholder="Name"><br><br>
@@ -49,7 +49,7 @@
             <textarea placeholder="Was hast du auf dem Herzen?" id="message" name="message"></textarea><br><br>
 
             <div id="checkbox">
-                <input type="checkbox" id="data" name="data" value="data">
+                <input type="checkbox" id="data" name="data" value="data" required>
                 <label id="data-label" for="data">Ich akzeptiere die Datenschutzerklärung</label><br>
             </div>
 
