--- a/src/subpage/contact.html
+++ b/src/subpage/contact.html
@@ -28,13 +28,13 @@
         <form action="https://formspree.io/f/xkndrvdv" method="post">
 
             <label for="name">Name*</label><br>
-            <input type="text" id="name" name="name" placeholder="Name"><br><br>
+            <input type="text" id="name" name="name" placeholder="Name" autocomplete="name"><br><br>
 
             <label for="email">E-Mail*</label><br>
-            <input type="email" id="email" name="email" placeholder="E-Mail"><br><br>
+            <input type="email" id="email" name="email" placeholder="E-Mail" autocomplete="email"><br><br>
 
             <label for="tel">Telefonnummer</label><br>
-            <input type="tel" id="tel" name="tel" placeholder="Telefonnummer"><br><br>
+            <input type="tel" id="tel" name="tel" placeholder="Telefonnummer" autocomplete="tel"><br><br>
 
             <div class="select-container">
                 <select class="select-box" id="dropdown">
