import products from json

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <p>Bio und Fair seit 1991</p>
         </div>
     
-        <button class="button-dark"><a href="/sub-page/">Zum Shop</a></button>
+        <button class="button-dark"><a href="subpage/shop.html">Zum Shop</a></button>
 
       </div>
     </header>
@@ -330,13 +330,13 @@
           </div>
         </div>
 
-        <button class="button-dark"><a href="/sub-page/">Zum Shop</a></button>
+        <button class="button-dark"><a href="subpage/shop.html">Zum Shop</a></button>
 
       </section>
-
-      {{> map }}
-
+    
     </main>
+
+    {{> map }}
 
     {{> footer }}
 
