--- a/src/subpage/product.html
+++ b/src/subpage/product.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/components/product.css">
     <link rel="stylesheet" href="../css/components/map.css">
     <link rel="stylesheet" href="../css/components/footer.css">
+    <link rel="stylesheet" href="../css/components/contact.css">
     <link href="https://fonts.googleapis.com/css?family=Oregano" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +27,10 @@
 
     <main>
         <div class="product-container"></div>
+
     </main>
+
+    
 
     <section class="section2">
 
@@ -216,6 +220,7 @@
 
     <script src="../js/index.js" type="module"></script>
     <script src="../js/product.js" type="module"></script>
+    <script src="../js/select.js" type="module"></script> 
     
 </body>
 </html>
