--- a/src/subpage/shop.html
+++ b/src/subpage/shop.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/components/shop.css">
     <link rel="stylesheet" href="../css/components/map.css">
     <link rel="stylesheet" href="../css/components/footer.css">
+    <link rel="stylesheet" href="../css/components/cart.css">
     <link href="https://fonts.googleapis.com/css?family=Oregano" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +37,7 @@
 
     {{> map }}
     {{> footer }}
-
+    {{> cart }}
     <script src="../js/index.js" type="module"></script>
     <script src="../js/shop.js" type="module"></script>
     
